# Distribute_mpc_ros2

./: .gitignore  README.md  cluster_robot_id.py  draw_graph.py  draw_path.py  requirements.txt  results.xlsx  run_all.sh  run_cluster.sh  run_local_sim.sh  run_test.sh
auto_test_logs_many_AMR_20250505_181853/: latency_0.0_iteration_1.csv  latency_0.0_iteration_4.csv  latency_0.0_iteration_5.csv  latency_0.0_iteration_6.csv  latency_0.0_iteration_7.csv  summary_results.csv
auto_test_logs_many_AMR_20250505_190309/: latency_0.0_iteration_2.csv  latency_0.0_iteration_4.csv  latency_0.0_iteration_5.csv  latency_0.0_iteration_7.csv  latency_0.0_iteration_9.csv  summary_results.csv
auto_test_logs_many_AMR_20250505_201546/: latency_1.0_iteration_0.csv  latency_1.0_iteration_4.csv  latency_1.0_iteration_5.csv  latency_1.0_iteration_6.csv  latency_1.0_iteration_7.csv  latency_1.0_iteration_8.csv  summary_results.csv
auto_test_logs_many_AMR_20250505_210723/: latency_0.0_iteration_0.csv  latency_0.0_iteration_1.csv  latency_0.0_iteration_10.csv  latency_0.0_iteration_12.csv  latency_0.0_iteration_13.csv  latency_0.0_iteration_18.csv  latency_0.0_iteration_19.csv  latency_0.0_iteration_3.csv  latency_0.0_iteration_6.csv  latency_0.0_iteration_8.csv  latency_1.0_iteration_0.csv  latency_1.0_iteration_1.csv  latency_1.0_iteration_11.csv  latency_1.0_iteration_12.csv  latency_1.0_iteration_13.csv  latency_1.0_iteration_19.csv  latency_1.0_iteration_2.csv  latency_1.0_iteration_3.csv  latency_1.0_iteration_4.csv  latency_1.0_iteration_5.csv  latency_1.0_iteration_6.csv  latency_1.0_iteration_8.csv  latency_1.0_iteration_9.csv  summary_results.csv
auto_test_logs_many_AMR_20250522_204244/: latency_0.0_iteration_0.csv  latency_0.0_iteration_1.csv  latency_0.0_iteration_10.csv  latency_0.0_iteration_11.csv  summary_results.csv  (+15 more)
src/gazebo_worlds/: CMakeLists.txt  package.xml
src/gazebo_worlds/models/my_robot/: model.sdf
src/msg_interfaces/: CMakeLists.txt  package.xml
src/msg_interfaces/msg/: ClusterToRobotTrajectory.msg  ClusterToRvizConvergeSignal.msg  ClusterToRvizReferencePath.msg  ClusterToRvizShortestPath.msg  GazeboToManagerState.msg  LocalRobotStates.msg  ManagerToClusterStart.msg  ManagerToClusterStateSet.msg  PerformanceMetrics.msg  PerformanceMetricsArray.msg  RobotToClusterState.msg  RobotToGazeboCmd.msg  RobotToRvizStatus.msg  RobotToRvizTargetPoint.msg
src/msg_interfaces/srv/: ExecuteCommand.srv  GetMapData.srv  RegisterRobot.srv
src/obj_gazebo_simulation/: package.xml  setup.cfg  setup.py
src/obj_gazebo_simulation/launch/: gazebo_converter.launch.py  gazebo_simulation.launch.py  gazebo_world.launch.py
src/obj_gazebo_simulation/models/many_AMR/: model.config  model.sdf
src/obj_gazebo_simulation/models/mobile_robot/: model.config  model.sdf  old.sdf
src/obj_gazebo_simulation/models/scene_1/: model.config  model.sdf
src/obj_gazebo_simulation/models/scene_2/: model.config  model.sdf
src/obj_gazebo_simulation/models/schedule_demo_data/: model.config  model.sdf
src/obj_gazebo_simulation/models/test_data/: model.config  model.sdf
src/obj_gazebo_simulation/models/test_data_cross/: model.config  model.sdf
src/obj_gazebo_simulation/models/test_data_encounter/: model.config  model.sdf
src/obj_gazebo_simulation/models/test_data_new/: model.config  model.sdf
src/obj_gazebo_simulation/models/test_data_original/: model.config  model.sdf
src/obj_gazebo_simulation/obj_gazebo_simulation/: demo.py  gazebo_converter.py  multi_robot_spawner.py
src/obj_gazebo_simulation/script/: json_to_sdf.py
src/obj_gazebo_simulation/worlds/: many_AMR.world  scene_1.world  scene_2.world  schedule_demo_data.world  test_data.world  test_data_cross.world  test_data_encounter.world  test_data_new.world  test_data_original.world
(+4657 files in other folders)
