<?xml version="1.0"?>
<package format="3">
  <name>gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The gazebo_worlds package</description>

  <maintainer email="yinsong@example.com">Yinsong Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for Gazebo -->
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros>
      <gazebo_model_path>${prefix}/models</gazebo_model_path>
    </gazebo_ros>
  </export>
</package>
